--- a/index.html
+++ b/index.html
@@ -46,101 +46,122 @@
             <div class="albums">
                 <div class="cat-header">New Albums</div>
                 <div class="content-holder">
-                    <div class="card king-crimson"><div class="on-card">
-                        <div class="band-name">King Crimson</div>
-                        <div class="album-name">Court of the Crimson King</div>
-                        <ol class="album-songs">
-                            <li class="song-name">21st Century Schizoid Man</li>
-                            <li class="song-name">I Talk To The Wind</li>
-                            <li class="song-name">Epitaph</li>
-                            <li class="song-name">Moonchild</li>
-                            <li class="song-name">The Court Of The Crimson King</li>
-                        </ol>
+                    <div class="card king-crimson">
+                        <div class="on-card">
+                            <div class="band-name">King Crimson</div>
+                            <div class="album-name">Court of the Crimson King</div>
+                            <ol class="album-songs">
+                                <li class="song-name">21st Century Schizoid Man</li>
+                                <li class="song-name">I Talk To The Wind</li>
+                                <li class="song-name">Epitaph</li>
+                                <li class="song-name">Moonchild</li>
+                                <li class="song-name">The Court Of The Crimson King</li>
+                            </ol>
+                        </div>
                     </div>
+                    <div class="card jethro-tull">
+                        <div class="on-card">
+                            <div class="band-name">Jethro Tull</div>
+                            <div class="album-name">Aqualung</div>
+                            <ol class="album-songs">
+                                <li class="song-name">Aqualung</li>
+                                <li class="song-name">Cross-Eyed Mary</li>
+                                <li class="song-name">Cheap Day Return</li>
+                                <li class="song-name">Mother Goose</li>
+                                <li class="song-name">Wond'rin Aloud</li>
+                                <li class="song-name">Up to Me</li>
+                                <li class="song-name">My God</li>
+                                <li class="song-name">Hymn 43</li>
+                                <li class="song-name">Slipstream</li>
+                                <li class="song-name">Locomotive Breath</li>
+                            </ol>
+                        </div>
                     </div>
-                    <div class="card jethro-tull"><div class="on-card">
-                        <div class="band-name">King Crimson</div>
-                        <div class="album-name">Court of the Crimson King</div>
-                        <ol class="album-songs">
-                            <li class="song-name">21st Century Schizoid Man</li>
-                            <li class="song-name">I Talk To The Wind</li>
-                            <li class="song-name">Epitaph</li>
-                            <li class="song-name">Moonchild</li>
-                            <li class="song-name">The Court Of The Crimson King</li>
-                        </ol>
+                    <div class="card yes">
+                        <div class="on-card">
+                            <div class="band-name">Yes</div>
+                            <div class="album-name">Fragile</div>
+                            <ol class="album-songs">
+                                <li class="song-name">Roundabout</li>
+                                <li class="song-name">Cans and Brahms</li>
+                                <li class="song-name">We Have Heaven</li>
+                                <li class="song-name">South Side of the Sky</li>
+                                <li class="song-name">Five per Cent for Nothing</li>
+                                <li class="song-name">Long Distance Runaround</li>
+                            </ol>
+                        </div>
                     </div>
+                    <div class="card pink-floyd">
+                        <div class="on-card">
+                            <div class="band-name">Pink Floyd</div>
+                            <div class="album-name">Animals</div>
+                            <ol class="album-songs">
+                                <li class="song-name">Pigs On The Wing (Pt.1)</li>
+                                <li class="song-name">Dogs</li>
+                                <li class="song-name">Sheep</li>
+                                <li class="song-name">Pigs On The Wing (Pt.2)</li>
+                            </ol>
+                        </div>
                     </div>
-                    <div class="card yes"><div class="on-card">
-                        <div class="band-name">King Crimson</div>
-                        <div class="album-name">Court of the Crimson King</div>
-                        <ol class="album-songs">
-                            <li class="song-name">21st Century Schizoid Man</li>
-                            <li class="song-name">I Talk To The Wind</li>
-                            <li class="song-name">Epitaph</li>
-                            <li class="song-name">Moonchild</li>
-                            <li class="song-name">The Court Of The Crimson King</li>
-                        </ol>
+                    <div class="card genesis">
+                        <div class="on-card">
+                            <div class="band-name">Genesis</div>
+                            <div class="album-name">Foxtrot</div>
+                            <ol class="album-songs">
+                                <li class="song-name">Watcher Of The Skies</li>
+                                <li class="song-name">Time Table</li>
+                                <li class="song-name">Get 'Em Out By Friday</li>
+                                <li class="song-name">Can-utility And The Coastliners</li>
+                                <li class="song-name">Horizons</li>
+                                <li class="song-name">Supper's Ready</li>
+                            </ol>
+                        </div>
                     </div>
+                    <div class="card supertramp">
+                        <div class="on-card">
+                            <div class="band-name">Supertramp</div>
+                            <div class="album-name">Crime Of The Century</div>
+                            <ol class="album-songs">
+                                <li class="song-name">School</li>
+                                <li class="song-name">Bloody Well Right</li>
+                                <li class="song-name">Hide In Your Shell</li>
+                                <li class="song-name">Asylum</li>
+                                <li class="song-name">Dreamer</li>
+                                <li class="song-name">Rudy</li>
+                                <li class="song-name">If Everyone Was Listening</li>
+                                <li class="song-name">Crime Of The Century</li>
+                            </ol>
+                        </div>
                     </div>
-                    <div class="card pink-floyd"><div class="on-card">
-                        <div class="band-name">King Crimson</div>
-                        <div class="album-name">Court of the Crimson King</div>
-                        <ol class="album-songs">
-                            <li class="song-name">21st Century Schizoid Man</li>
-                            <li class="song-name">I Talk To The Wind</li>
-                            <li class="song-name">Epitaph</li>
-                            <li class="song-name">Moonchild</li>
-                            <li class="song-name">The Court Of The Crimson King</li>
-                        </ol>
+                    <div class="card can">
+                        <div class="on-card">
+                            <div class="band-name">Can</div>
+                            <div class="album-name">Ege Bamyası</div>
+                            <ol class="album-songs">
+                                <li class="song-name">Pinch</li>
+                                <li class="song-name">Sing Swan Song</li>
+                                <li class="song-name">One More Night</li>
+                                <li class="song-name">Vitamin C</li>
+                                <li class="song-name">Soup</li>
+                                <li class="song-name">I'm So Green</li>
+                                <li class="song-name">Spoon</li>
+                            </ol>
+                        </div>
                     </div>
-                    </div>
-                    <div class="card genesis"><div class="on-card">
-                        <div class="band-name">King Crimson</div>
-                        <div class="album-name">Court of the Crimson King</div>
-                        <ol class="album-songs">
-                            <li class="song-name">21st Century Schizoid Man</li>
-                            <li class="song-name">I Talk To The Wind</li>
-                            <li class="song-name">Epitaph</li>
-                            <li class="song-name">Moonchild</li>
-                            <li class="song-name">The Court Of The Crimson King</li>
-                        </ol>
-                    </div>
-                    </div>
-                    <div class="card supertramp"><div class="on-card">
-                        <div class="band-name">King Crimson</div>
-                        <div class="album-name">Court of the Crimson King</div>
-                        <ol class="album-songs">
-                            <li class="song-name">21st Century Schizoid Man</li>
-                            <li class="song-name">I Talk To The Wind</li>
-                            <li class="song-name">Epitaph</li>
-                            <li class="song-name">Moonchild</li>
-                            <li class="song-name">The Court Of The Crimson King</li>
-                        </ol>
-                    </div>
-                    </div>
-                    <div class="card can"><div class="on-card">
-                        <div class="band-name">King Crimson</div>
-                        <div class="album-name">Court of the Crimson King</div>
-                        <ol class="album-songs">
-                            <li class="song-name">21st Century Schizoid Man</li>
-                            <li class="song-name">I Talk To The Wind</li>
-                            <li class="song-name">Epitaph</li>
-                            <li class="song-name">Moonchild</li>
-                            <li class="song-name">The Court Of The Crimson King</li>
-                        </ol>
-                    </div>
-                    </div>
-                    <div class="card w-ash"><div class="on-card">
-                        <div class="band-name">King Crimson</div>
-                        <div class="album-name">Court of the Crimson King</div>
-                        <ol class="album-songs">
-                            <li class="song-name">21st Century Schizoid Man</li>
-                            <li class="song-name">I Talk To The Wind</li>
-                            <li class="song-name">Epitaph</li>
-                            <li class="song-name">Moonchild</li>
-                            <li class="song-name">The Court Of The Crimson King</li>
-                        </ol>
-                    </div>
+                    <div class="card w-ash">
+                        <div class="on-card">
+                            <div class="band-name">Wishbone Ash</div>
+                            <div class="album-name">Argus</div>
+                            <ol class="album-songs">
+                                <li class="song-name">Time Was</li>
+                                <li class="song-name">Sometime World</li>
+                                <li class="song-name">Blowin' Free</li>
+                                <li class="song-name">The King Will Come</li>
+                                <li class="song-name">Leaf And Stream</li>
+                                <li class="song-name">Warrior</li>
+                                <li class="song-name">Throw Down The Sword</li>
+                            </ol>
+                        </div>
                     </div>
 
                 </div>
@@ -152,60 +173,65 @@
                     <div class="cat-header">New Releases</div>
                     <div class="release-list">
                         <div class="released-album">
-                            <div class="ra-albumlogo">Album Image</div>
+                            <div class="ra-albumlogo album1"></div>
                             <div class="ra-information">
-                                <div class="ra-bandname">Dead Meadow</div>
-                                <div class="ra-albumname">Old Growth</div>
+                                <div class="ra-bandname">Raum</div>
+                                <div class="ra-albumname">Tangerine Dream</div>
                             </div>
                         </div>
                         <div class="released-album">
-                            <div class="ra-albumlogo">Album Image</div>
+                            <div class="ra-albumlogo album2"></div>
                             <div class="ra-information">
-                                <div class="ra-bandname">Dead Meadow</div>
-                                <div class="ra-albumname">Old Growth</div>
+                                <div class="ra-bandname">Alduorka</div>
+                                <div class="ra-albumname">Breidablik</div>
                             </div>
                         </div>
                         <div class="released-album">
-                            <div class="ra-albumlogo">Album Image</div>
+                            <div class="ra-albumlogo album3"></div>
                             <div class="ra-information">
-                                <div class="ra-bandname">Dead Meadow</div>
-                                <div class="ra-albumname">Old Growth</div>
+                                <div class="ra-bandname">The Murder Wall</div>
+                                <div class="ra-albumname">Kaprekar's Constant</div>
                             </div>
                         </div>
                     </div>
 
 
                 </div>
-                <div class="trends">
+                <div class="announcements">
                     <div class="cat-header">Trending Bands</div>
-                    <div class="trend-list">
-                        <div class="trend-item">
-                            <div class="band-logo">band logo</div>
-                            <div class="band-name">band name</div>
-                            <div class="band-best">best album</div>
+                    <div class="release-list">
+                        <div class="released-album">
+                            <div class="ra-albumlogo trend1"></div>
+                            <div class="ra-information">
+                                <div class="ra-bandname">Wobbler</div>
+                                <div class="ra-albumname">From Silence to Somewhere</div>
+                            </div>
+                        </div>
+                        <div class="released-album">
+                            <div class="ra-albumlogo trend2"></div>
+                            <div class="ra-information">
+                                <div class="ra-bandname">All Traps On Earth</div>
+                                <div class="ra-albumname">A Drop of Light</div>
+                            </div>
+                        </div>
+                        <div class="released-album">
+                            <div class="ra-albumlogo trend3"></div>
+                            <div class="ra-information">
+                                <div class="ra-bandname">Shamblemaths</div>
+                                <div class="ra-albumname">Shamblemaths 2</div>
+                            </div>
+                        </div>
+                        <div class="released-album">
+                            <div class="ra-albumlogo trend4"></div>
+                            <div class="ra-information">
+                                <div class="ra-bandname">Daal</div>
+                                <div class="ra-albumname">Decalogue of Darkness</div>
+                            </div>
                         </div>
                     </div>
-                    <div class="trend-list">
-                        <div class="trend-item">
-                            <div class="band-logo">band logo</div>
-                            <div class="band-name">band name</div>
-                            <div class="band-best">best album</div>
-                        </div>
-                    </div>
-                    <div class="trend-list">
-                        <div class="trend-item">
-                            <div class="band-logo">band logo</div>
-                            <div class="band-name">band name</div>
-                            <div class="band-best">best album</div>
-                        </div>
-                    </div>
-                    <div class="trend-list">
-                        <div class="trend-item">
-                            <div class="band-logo">band logo</div>
-                            <div class="band-name">band name</div>
-                            <div class="band-best">best album</div>
-                        </div>
-                    </div>
+
+
+                </div>
                 </div>
             </div>
         </div>
