--- a/index.html
+++ b/index.html
@@ -31,13 +31,12 @@
     <div class="rightside">
         <div class="top-bar">
             <input class="searchbox" type="text" placeholder="Search..">
-            <div class="notifier">Notifier</div>
-            <div class="useravatar">UserAvatar</div>
-            <div class="username">User Name</div>
+            <img class="notifier" src="assets/bell.png">
+            <img class="useravatar" src="assets/guitar-pick.png">
+            <div class="username">Exaltech</div>
         </div>
         <div class="top-header">
-            <div class="useravatar">UserAvatar</div>
-            <div class="username">UserName</div>
+            <div class="username">Exaltech</div>
             <button class="button-new">New</button>
             <button class="button-upload">Upload</button>
             <button class="button-share">Share</button>
@@ -182,6 +181,7 @@
                         <div class="released-album">
                             <div class="ra-albumlogo album2"></div>
                             <div class="ra-information">
+                                
                                 <div class="ra-bandname">Alduorka</div>
                                 <div class="ra-albumname">Breidablik</div>
                             </div>
